feat(printing): use automatic driver defaults (#199)
